--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,12 @@
-django==3.2.16
+asgiref==3.9.1
+beautifulsoup4==4.13.4
+Django==3.2.16
+django-bootstrap5==21.3
+django-storages==1.14.6
+django_debug_toolbar==3.8.1
+pillow==10.4.0
+pytz==2025.2
+soupsieve==2.7
+sqlparse==0.5.3
+typing_extensions==4.14.1
+tzdata==2025.2
